--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": ">= 1.3.2",
     "bootstrap": ">= 3.3.0",
     "angular-hotkeys": "chieffancypants/angular-hotkeys#~1.4.5",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-bootstrap": "~0.11.2"
   }
 }
